--- a/public/css/live.css
+++ b/public/css/live.css
@@ -11,3 +11,12 @@
     font-weight:900;
     text-shadow:#00f 3px 0 4px,#00f 0 3px 4px,#00f -3px 0 4px,#00f 0 -3px 4px;   
 }
+
+.heartbeat{
+         animation: heartbeat 1s infinite; 
+}
+@keyframes heartbeat{
+        from{opacity: .8;}
+        50%{opacity: 1;}
+        to{opacity: .8;}
+}
